# KW5-VacancyOnTable

./: README.md  main.py  pyproject.toml  utils.py
src/: config.py  database_utils.py  manager.py  utils.py
